--- a/Develop/index.html
+++ b/Develop/index.html
@@ -61,35 +61,30 @@
                 </p>
             </article>
         </section>
-        <div class="benefits">
-            <div class="benefit-lead">
+        <aside class="benefits">
+            <article class="benefit-article">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="Image of Funnel with gear funneling into money." />
                 <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers
-                    directly
-                    to your website.
+                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
-            </div>
-            <div class="benefit-brand">
+            </article>
+            <article class="benefit-article">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="Image of person with a ligthbulb with a head."/>
                 <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and
-                    visibility
-                    for your business.
+                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
-            </div>
-            <div class="benefit-cost">
+            </article>
+            <article class="benefit-article">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="Image of gears with money symbols."/>
                 <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no
-                    longer
-                    need to advertise your page.
+                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
-        </div>
+            </article>
+        </aside>
+        
         <div class="footer">
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
