--- a/Develop/index.html
+++ b/Develop/index.html
@@ -66,31 +66,36 @@
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="Image of Funnel with gear funneling into money." />
                 <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                    Inbound strategies for lead generation require less work for your business, bringing customers
+                    directly to your website.
                 </p>
             </article>
             <article class="benefit-article">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="Image of person with a ligthbulb with a head."/>
+                <img src="./assets/images/brand-awareness.png" alt="Image of person with a ligthbulb with a head." />
                 <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                    Users find your business through paid and organic searches, increasing the search ranking and
+                    visibility for your business.
                 </p>
             </article>
             <article class="benefit-article">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="Image of gears with money symbols."/>
+                <img src="./assets/images/cost-management.png" alt="Image of gears with money symbols." />
                 <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                    As the search ranking for your business increases, your advertising costs decrease, and you no
+                    longer need to advertise your page.
                 </p>
             </article>
         </aside>
-        
-        <div class="footer">
-            <h2>Made with ❤️️ by Horiseon</h2>
+
+        <footer>
+            <!-- Replaced h2 tag with h4 to maintain proper header structure -->
+            <h4>Made with ❤️️ by Horiseon</h4>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
-        </div>
+        </footer>
+    </main>
 </body>
 
 </html>
