--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,33 +31,24 @@
             <!-- Added id to fix navigation link -->
             <article id="search-engine-optimization" class="content-article">
                 <!-- Added alt attributes to all images -->
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
-                    alt="Image of Notebook with SEO linking to Backlinks, content, headlines, link building, mobile compatibility, and social media." />
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of Notebook with SEO linking to Backlinks, content, headlines, link building, mobile compatibility, and social media."/>
                 <h2>Search Engine Optimization</h2>
                 <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they
-                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                    your visibility and find the right customers for your business.
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
                 </p>
             </article>
             <article id="online-reputation-management" class="content-article">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right"
-                    alt="Image of Laptop with increasing bar chart with the word Reputation." />
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of Laptop with increasing bar chart with the word Reputation."/>
                 <h2>Online Reputation Management</h2>
                 <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an
-                    internet connection to say whatever they want about your business. Online Reputation Management
-                    gives you the control over what potential customers see when they search for your business.
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                 </p>
             </article>
             <article id="social-media-marketing" class="content-article">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left"
-                    alt="Image of Social Media Logos and Icons." />
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of Social Media Logos and Icons."/>
                 <h2>Social Media Marketing</h2>
                 <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps
-                    you determine which platforms are suited to your brand, using analytics to find the right markets
-                    and increase your lead generation.
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </article>
         </section>
